# researchComputer-generated-multi-objective-robot-designs

./: Cargo.toml  README.md  latest_solution.ps1  license.md
src/: archive.rs  camera.rs  collision.rs  fitness.rs  iterators.rs  main.rs  pareto.rs  pls.rs  solution.rs
